Added the WIP images

--- a/Dockerfile.new
+++ b/Dockerfile.new
@@ -1,6 +1,8 @@
-FROM alpine as copy
-ARG PM_VERSION
+FROM php:7.4-cli-alpine as PHPBASE
 
+RUN apt update -y && apt install
+
+FROM alpine as copy
 WORKDIR /tmp
 RUN wget https://github.com/ProcessMaker/processmaker/archive/refs/tags/v${PM_VERSION}.zip
 RUN unzip v${PM_VERSION}.zip && rm -rf /code/pm4 && mv processmaker-${PM_VERSION} /code/pm4
@@ -11,13 +13,11 @@ COPY --from=copy /code/pm4 .
 RUN composer install
 COPY build-files/laravel-echo-server.json .
 
-FROM node:lts-alpine as node
+FROM node:lts-alpine as NODE
 WORKDIR /code/pm4
 COPY --from=vendor /code/pm4 .
-RUN npm install --unsafe-perm=true && npm run dev
+RUN npm install
+RUN npm run dev
 
-FROM processmaker/pm4-base:v4.1.20
-WORKDIR /code/pm4
-COPY --from=node /code/pm4 .
-COPY build-files/init.sh .
-CMD bash init.sh && supervisord --nodaemon
+FROM nginx:alpine
+COPY build-files/nginx.conf /etc/nginx/nginx.conf
