--- a/Dockerfile.new
+++ b/Dockerfile.new
@@ -1,8 +1,3 @@
-FROM php:7.4-cli-alpine as PHPBASE
-
-RUN apt update -y && apt install
-RUN sed -i 's/www-data/root/g' /etc/php/7.4/fpm/pool.d/www.conf
-
 FROM alpine as copy
 ARG PM_VERSION
 WORKDIR /tmp
@@ -22,12 +17,20 @@ COPY --from=vendor /code/pm4 .
 RUN npm install
 RUN npm run dev
 
-FROM nginx:alpine
-RUN apk add --no-cache supervisor
+FROM serversideup/php:7.4-fpm-nginx
+ENV DEBIAN_FRONTEND=noninteractive
+ENV TZ="America/Los_Angeles"
+RUN apt update
+RUN apt-get install -y supervisor cron php-json php-common php-mysql php-zip php-gd php-mbstring php-curl php-xml php-pear php-bcmath php-imagick php-sqlite3 mysql-client \
+    && apt-get clean \
+        && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
+RUN sed -i 's/www-data/root/g' /etc/php/7.4/fpm/pool.d/www.conf
 COPY build-files/services.conf /etc/supervisor/conf.d/services.conf
 COPY build-files/nginx.conf /etc/nginx/nginx.conf
 COPY build-files/laravel-cron /etc/cron.d/laravel-cron
 RUN chmod 0644 /etc/cron.d/laravel-cron && crontab /etc/cron.d/laravel-cron
 WORKDIR /code/pm4
 COPY --from=node /code/pm4 .
+COPY build-files/init.sh .
 EXPOSE 80 443 6001
+CMD bash init.sh && supervisord --nodaemon
