--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
-version: "3.8"
+version: '3.8'
 services:
   web:
-    image: processmaker/pm4-core:${PM_VERSION}
+    build:
+      context: .
+      dockerfile: Dockerfile.new
     ports:
       - ${PM_APP_PORT}:80
       - ${PM_BROADCASTER_PORT}:6001
@@ -10,21 +12,21 @@ services:
       - PM_APP_PORT
       - PM_BROADCASTER_PORT
     volumes:
-      - ${PM_DOCKER_SOCK}:/var/run/docker.sock
+      - /var/run/docker.sock:/usr/bin/docker.sock
       - storage:/code/pm4/storage
     links:
       - redis
-      - mysql 
+      - mysql
     depends_on:
       - mysql
-      - redis 
+      - redis
   redis:
     image: redis
   mysql:
     image: mysql:5.7
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: password 
+      MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: processmaker
       MYSQL_USER: pm
       MYSQL_PASSWORD: pass
