Build with private packages

--- a/.env
+++ b/.env
@@ -1,5 +1,23 @@
-PM_VERSION=4.1.21
+PM_VERSION=local
+CODEBASE_PATH=/code/pm4
+PACKAGES_PATH=/code/pm4-packages
+PM_CI=true
 PM_APP_URL=http://localhost
 PM_APP_PORT=8080
 PM_BROADCASTER_PORT=6004
 PM_DOCKER_SOCK=/var/run/docker.sock
+PROCESSMAKER_SCRIPTS_DOCKER=/usr/local/bin/docker
+PROCESSMAKER_SCRIPTS_DOCKER_MODE=copying
+LARAVEL_ECHO_SERVER_AUTH_HOST=http://localhost
+SESSION_SECURE_COOKIE=false
+CACHE_DRIVER=redis
+SESSION_DOMAIN=null
+GOOGLE_API_TOKEN=test
+SLACK_OAUTH_ACCESS_TOKEN=test
+DB_HOSTNAME=mysql
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=password
+DB_DATABASE="processmaker"
+REDIS_HOST=redis
+HOST_CACHE_PATH=./cache
