--- a/build-files/services.conf
+++ b/build-files/services.conf
@@ -15,6 +15,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+autorestart=true
 
 [program:laravel-echo-server]
 directory=/code/pm4
