--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,54 @@
 version: "3.8"
 services:
-  web:
-    image: processmaker/pm4-core:${PM_VERSION}
-    ports:
-      - ${PM_APP_PORT}:80
-      - ${PM_BROADCASTER_PORT}:6001
-    environment:
-      - PM_APP_URL
-      - PM_APP_PORT
-      - PM_BROADCASTER_PORT
+  builder:
+    build: .
+    env_file:
+      - .env
     volumes:
       - ${PM_DOCKER_SOCK}:/var/run/docker.sock
-      - storage:/code/pm4/storage
+      # - storage:/code/pm4/storage
+      - ${HOST_CACHE_PATH}:/root/.cache
     links:
       - redis
       - mysql 
     depends_on:
       - mysql
       - redis 
+  app:
+    image: pm4-app:${PM_VERSION}
+    ports:
+      - ${PM_APP_PORT}:80
+      - ${PM_BROADCASTER_PORT}:6001
+    env_file:
+      - .env
+    links:
+      - redis
+      - mysql 
+    depends_on:
+      - mysql
+      - redis 
+    volumes:
+      - ${PM_DOCKER_SOCK}:/var/run/docker.sock
+      - ${HOST_CACHE_PATH}:/root/.cache
+  base:
+    image: pm4-base:local 
+    build:
+      context: .
+      dockerfile: Dockerfile.base
+
   redis:
     image: redis
+    volumes:
+      - redis:/data
   mysql:
     image: mysql:5.7
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password 
       MYSQL_DATABASE: processmaker
-      MYSQL_USER: pm
-      MYSQL_PASSWORD: pass
     volumes:
       - database:/var/lib/mysql
 volumes:
   database:
-  storage:
+  # storage:
+  redis:
