Pass github token

--- a/.env
+++ b/.env
@@ -20,4 +20,4 @@ DB_USERNAME=root
 DB_PASSWORD=password
 DB_DATABASE="processmaker"
 REDIS_HOST=redis
-HOST_CACHE_PATH=./cache
+HOST_CACHE_PATH="./cache"
