--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,19 @@ services:
       - ${PM_DOCKER_SOCK}:/var/run/docker.sock
       # - storage:/code/pm4/storage
       - ${HOST_CACHE_PATH}:/root/.cache
+      - pm4:/code/pm4
+      - pm4-packages:/code/pm4-packages
     links:
       - redis
       - mysql 
     depends_on:
       - mysql
       - redis 
-  app:
-    image: pm4-app:${PM_VERSION}
+  runner:
+    image: pm4-runner:local
+    build:
+      context: .
+      dockerfile: Dockerfile.runner
     ports:
       - ${PM_APP_PORT}:80
       - ${PM_BROADCASTER_PORT}:6001
@@ -29,9 +34,12 @@ services:
     depends_on:
       - mysql
       - redis 
+      - builder 
     volumes:
       - ${PM_DOCKER_SOCK}:/var/run/docker.sock
       - ${HOST_CACHE_PATH}:/root/.cache
+      - pm4:/code/pm4
+      - pm4-packages:/code/pm4-packages
   base:
     image: pm4-base:local 
     build:
@@ -54,3 +62,5 @@ volumes:
   database:
   # storage:
   redis:
+  pm4:
+  pm4-packages:
