--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ PROCESSMAKER_SCRIPTS_DOCKER=/usr/local/bin/docker
 PROCESSMAKER_SCRIPTS_DOCKER_MODE=copying
 LARAVEL_ECHO_SERVER_AUTH_HOST=http://localhost
 SESSION_SECURE_COOKIE=false
-CACHE_DRIVER=redis
+CACHE_DRIVER=array
 SESSION_DOMAIN=null
 GOOGLE_API_TOKEN=test
 SLACK_OAUTH_ACCESS_TOKEN=test
@@ -20,4 +20,10 @@ DB_USERNAME=root
 DB_PASSWORD=password
 DB_DATABASE="processmaker"
 REDIS_HOST=redis
+CACHE_PATH="/pm4-cache"
 HOST_CACHE_PATH="/home/runner/cache"
+TELESCOPE_ENABLED=false
+
+COMPOSER_MIRROR_PATH_REPOS=1
+PARALLEL_TEST_PROCESSES=6
+# vendor/bin/paratest -p 6
