--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,32 @@
 version: "3.8"
 services:
-  builder:
-    build: .
-    env_file:
-      - .env
-    environment:
-      - GITHUB_TOKEN
-      - GITHUB_CONTEXT
-    volumes:
-      - ${PM_DOCKER_SOCK}:/var/run/docker.sock
-      - ${HOST_CACHE_PATH}:/root/.cache
-      - pm4:/code/pm4
-      - pm4-packages:/code/pm4-packages
-    links:
-      - redis
-      - mysql 
-    depends_on:
-      - mysql
-      - redis 
-  runner:
-    image: pm4-runner:local
-    build:
-      context: .
-      dockerfile: Dockerfile.runner
-    ports:
-      - ${PM_APP_PORT}:80
-      - ${PM_BROADCASTER_PORT}:6001
-    links:
-      - redis
-      - mysql 
-    depends_on:
-      - mysql
-      - redis 
-      - builder 
-    volumes:
-      - ${PM_DOCKER_SOCK}:/var/run/docker.sock
-      - ${HOST_CACHE_PATH}:/root/.cache
-      - pm4:/code/pm4
-      - pm4-packages:/code/pm4-packages
-    environment:
-      - PHPUNIT_ARGS
   base:
-    image: processmaker/pm4-base:2.0.0 
+    image: nolanpro/pm4-ci-base
     build:
       context: .
       dockerfile: Dockerfile.base
-
+  build:
+    image: pm4-ci-build:local
+    build:
+      context: .
+      dockerfile: Dockerfile.build
+      args:
+        GITHUB_TOKEN:
+        GITHUB_CONTEXT:
+        HOST_CACHE_PATH:
+  install:
+    image: pm4-ci-build:local
+    command: sh install-and-test.sh
+    volumes:
+      - ./pm4-tools:/code/pm4-tools
+    env_file:
+      - .env
+    links:
+      - redis
+      - mysql 
+    depends_on:
+      - mysql
+      - redis 
   redis:
     image: redis
     volumes:
