--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -6,21 +6,21 @@ ENV GITHUB_CONTEXT=${GITHUB_CONTEXT}
 ARG GITHUB_TOKEN
 ENV GITHUB_TOKEN=${GITHUB_TOKEN}
 
-COPY pm4-tools pm4-tools
-# RUN ./composer.phar global config repositories.pm4-tools vcs https://${GITHUB_TOKEN}@github.com/ProcessMaker/pm4-tools.git
-# RUN composer global config repositories.pm4-tools path /code/pm4-tools 
-# RUN ./composer.phar global require processmaker/pm4-tools:dev-master
-# RUN composer global require processmaker/pm4-tools
+# COPY pm4-tools pm4-tools
+RUN git clone https://${GITHUB_TOKEN}@github.com/ProcessMaker/pm4-tools.git /code/pm4-tools
+WORKDIR /code/pm4-tools
+RUN composer install
+COPY .env /code/pm4-tools/.env
 
 # Install NodeJS
 COPY --from=node:14.4-alpine /usr/local /nodejs
 ENV PATH="/nodejs/bin:${PATH}"
 RUN npm config set cache /cache/npm
 
-COPY .env pm4-tools/.env
 ENV ENV=/root/.profile
 
 WORKDIR /code/pm4
+
 RUN /code/pm4-tools/pm build-ci
 ENV CYPRESS_INSTALL_BINARY=0
 RUN /code/pm4-tools/pm build-javascript-ci
