Update build strategy

--- a/.env
+++ b/.env
@@ -24,6 +24,6 @@ CACHE_PATH="/pm4-cache"
 HOST_CACHE_PATH="/home/runner/cache"
 TELESCOPE_ENABLED=false
 
-COMPOSER_MIRROR_PATH_REPOS=1
+# COMPOSER_MIRROR_PATH_REPOS=1
 PARALLEL_TEST_PROCESSES=6
 # vendor/bin/paratest -p 6
