--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,11 @@ services:
   redis:
     image: redis
   mysql:
+    platform: linux/x86_64
     image: mysql:5.7
     restart: always
+    ports:
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: processmaker
