--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "3.8"
 services:
-  builder:
-    image: local:latest
+  cicd:
+    image: cicd:latest
     build:
       context: .
-      dockerfile: Dockerfile.builder
-    command: sh builder.sh
+      dockerfile: Dockerfile.cicd
+    command: sh cicd-build-run.sh
     environment:
       - GITHUB_TOKEN
       - GITHUB_CONTEXT
     env_file:
-      - .env
+      - .env-cicd
     links:
       - redis
       - mysql 
@@ -31,6 +31,25 @@ services:
     volumes:
       - redis:/data
 
+  web:
+    image: processmaker/pm4-core:${PM_VERSION}
+    ports:
+      - ${PM_APP_PORT}:80
+      - ${PM_BROADCASTER_PORT}:6001
+    environment:
+      - PM_APP_URL
+      - PM_APP_PORT
+      - PM_BROADCASTER_PORT
+    volumes:
+      - ${PM_DOCKER_SOCK}:/var/run/docker.sock
+      - storage:/code/pm4/storage
+    links:
+      - redis
+      - mysql 
+    depends_on:
+      - mysql
+      - redis
+
   mysql:
     image: mysql:5.7
     restart: always
@@ -43,3 +62,4 @@ services:
 volumes:
   database:
   redis:
+  storage:
