--- a/.env-cicd
+++ b/.env-cicd
@@ -23,6 +23,7 @@ REDIS_HOST=redis
 CACHE_PATH="/pm4-cache"
 HOST_CACHE_PATH="/home/runner/cache"
 TELESCOPE_ENABLED=false
+BUILD_JAVASCRIPT=true
 
 # COMPOSER_MIRROR_PATH_REPOS=1
 PARALLEL_TEST_PROCESSES=6
