--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,16 @@ services:
     image: redis
     volumes:
       - redis:/data
+  
+  debug:
+    image: debug:latest
+    command: bash
+    env_file:
+      - .env-cicd
+    links:
+      - mysql 
+    depends_on:
+      - mysql
 
   web:
     image: processmaker/pm4-core:${PM_VERSION}
