FOUR-5291: Use env variables instead of github context variables

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ PM_APP_URL=http://localhost
 PM_APP_PORT=8080
 PM_BROADCASTER_PORT=6004
 PM_DOCKER_SOCK=/var/run/docker.sock
+CI_PROJECT=processmaker
+CI_PACKAGE_BRANCH=develop
