--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,31 +13,31 @@ services:
       - .env-cicd
     links:
       - redis
-      - mysql 
+      - mysql
     depends_on:
       - mysql
-      - redis 
+      - redis
     volumes:
       - ./cache:/cache
-  
+
   base:
     image: processmaker/pm4-base:2.0.0
     build:
       context: .
       dockerfile: Dockerfile.base
-  
+
   redis:
     image: redis
     volumes:
       - redis:/data
-  
+
   debug:
     image: debug:latest
     command: bash
     env_file:
       - .env-cicd
     links:
-      - mysql 
+      - mysql
     depends_on:
       - mysql
 
@@ -50,12 +50,14 @@ services:
       - PM_APP_URL
       - PM_APP_PORT
       - PM_BROADCASTER_PORT
+      - CI_PROJECT
+      - CI_PACKAGE_BRANCH
     volumes:
       - ${PM_DOCKER_SOCK}:/var/run/docker.sock
       - storage:/code/pm4/storage
     links:
       - redis
-      - mysql 
+      - mysql
     depends_on:
       - mysql
       - redis
@@ -64,10 +66,10 @@ services:
     image: mysql:5.7
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: password 
+      MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: processmaker
     tmpfs: /var/lib/mysql
-      
+
 volumes:
   redis:
   storage:
