--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile.cicd
     command: sh cicd-build-run.sh
     environment:
+      - GITHUB_TOKEN
       - CI_PR_BODY
       - CI_PROJECT
       - CI_PACKAGE_BRANCH
