--- a/Dockerfile.php81.base
+++ b/Dockerfile.php81.base
@@ -26,6 +26,8 @@ RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | b
 ENV NODE_PATH $NVM_DIR/versions/node/v$NODE_VERSION/lib/node_modules
 ENV PATH      $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
+RUN npm install -g npm@8.9
+
 #
 # install composer
 # 
