--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile.cicd
       args:
-        - BASE_VERSION=${BASE_VERSION:-2.1.5}
+        - BASE_VERSION=${BASE_VERSION:-2.1.6}
     command: sh cicd-build-run.sh
     environment:
       - GITHUB_TOKEN
@@ -25,14 +25,14 @@ services:
     volumes:
       - ./cache:/cache
 
-  base:
+  base-old:
     image: processmaker/pm4-base:2.0.0
     build:
       context: .
       dockerfile: Dockerfile.base
   
   base-php81:
-    image: processmaker/pm4-base:${BASE_VERSION:-2.1.5}
+    image: processmaker/pm4-base:${BASE_VERSION:-2.1.6}
     build:
       context: .
       dockerfile: Dockerfile.php81.base
