Adding ability to connect to any mysql database, or redis host

--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ PM_APP_URL=http://localhost
 PM_APP_PORT=8080
 PM_BROADCASTER_PORT=6004
 PM_DOCKER_SOCK=/var/run/docker.sock
+PM_DB_HOST=mysql
+PM_DB_PORT=3306
+PM_DB_NAME=processmaker
+PM_DB_USERNAME=pm
+PM_DB_PASSWORD=pass
+PM_REDIS_HOST=redis
